# BBC_Labs

./: BBC_Labo01_Introduction.ipynb  README.md  main.py  pyproject.toml
Labo01/: BBC_Labo01_Introduction_Michael_Strefeler.ipynb
Labo02/: AF466638.fasta  BBC_TP2_Strefeler.ipynb  Labo-2-IntroDB_BBC_2025_Michael_Strefeler.ipynb  labo2_sequence_inconnue.fasta
Labo03/: BBC_TP3_Strefeler_Michael.md  Z2BCDXK3016-Alignment.json  custom-header.tex  phages.txt  sequence.fasta
Labo04/: TP4_BBC_TP4_Strefeler.ipynb  labo-4_protein-sequences.phy  labo-4_protein-sequences.tre
Labo04/data/: countries_latlon.csv  gi_list.pkl  labo-4_protein-sequences.aln  labo-4_protein-sequences.fasta  proteins_info.pkl
Labo05/: TP5_BBC_Strefeler.ipynb  stats.py
