[project]
name = "bbc-labs"
version = "0.1.0"
description = "All of the labs for the BBC course"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.85",
    "cartopy>=0.24.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
]
